@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 Flipkart Internet Pvt. Ltd.
+ * Copyright 2024 Authors, Flipkart Internet Pvt. Ltd.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,6 +30,6 @@ public class ListShardSelector<T> implements ShardSelector<T, ListBasedServiceRe
         return null == criteria ? serviceRegistry.nodeList() : serviceRegistry.nodeList()
                 .stream()
                 .filter(node -> criteria.test(node.getNodeData()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
